# BOB

./: .gitignore
BOB-diagnostics/: BOB_Diagnostics.ini  pyproject.toml
BOB-diagnostics/bob_diagnostics/: main.py
BOB-diagnostics/bob_diagnostics/gui/: connection_panel.py  docksplits.py  imu_panel.py  motor_control_panel.py  pid_output_panel.py  pid_tuning_panel.py  status_bar.py
BOB-diagnostics/bob_diagnostics/state/: app_state.py  tcp_client.py  telemetry_buffer.py  ws_client.py
BOB-firmware/: CMakeLists.txt
BOB-firmware/main/: BOB-firmware.c  CMakeLists.txt
BOB-firmware/main/include/: balance.h  drv8833.h  mpu6500.h  pid.h  wifi.h
BOB-firmware/main/src/: balance.c  drv8833.c  mpu6500.c  pid.c  wifi.c
BOB_planning/: PLANNING.md
