idf_component_register(
    SRCS
        "BOB-firmware.c"
        "src/drv8833.c"
        "src/mpu6500.c"
        "src/balance.c"
        "src/pid.c"
        "src/wifi.c"
    INCLUDE_DIRS
        "include"
    PRIV_REQUIRES
        esp_timer
        driver
        esp_driver_ledc
        esp_driver_gpio
        esp_wifi
        esp_netif
        esp_http_server
        esp_event
        nvs_flash
        lwip
        cjson
)
